--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@sequelize/postgres": "^7.0.0-alpha.41",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
