--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^4.2.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "PORT=3001 craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
