--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "react-bootstrap": "^2.10.4",
