--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "react-bootstrap": "^2.10.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sequelize-erd": "^1.3.1"
   }
 }
